--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-wordcloud==1.6.0
-Flask_Cors==3.0.8
-twint==2.1.11
 pandas==0.25.3
 Flask==1.1.1
+twint==2.1.11
+Flask_Cors==3.0.8
+wordcloud==1.6.0
+humanfriendly==4.18
